--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "ncov2019",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.23.1",
+    "@blueprintjs/icons": "^3.13.0",
+    "@blueprintjs/select": "^3.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "pigeon-maps": "^0.14.0",
+    "pigeon-marker": "^0.3.4",
+    "pigeon-overlay": "^0.2.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
